# lunar-forge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agent/sessions/: 20260723T213053736866Z-528b82dc.jsonl  20260723T213333578219Z-dffc4bc1.jsonl
docs/: manual-testing.md
examples/: README.md
lunar_forge/: __init__.py  agent.py  cli.py  config.py  instructions.py  permissions.py  planning.py  project_detection.py  prompts.py
lunar_forge/mcp/: __init__.py  client.py  config.py  permissions.py  registry.py
lunar_forge/model_clients/: __init__.py  anthropic_client.py  base.py  litellm_client.py  litellm_responses_client.py  openai_client.py  openai_compatible_client.py
lunar_forge/plugins/: __init__.py  loader.py  manifest.py  registry.py  sandbox.py
lunar_forge/runtime/: __init__.py  checkpoints.py  diffs.py  docker_runner.py  git.py  local_runner.py  sessions.py
lunar_forge/sandbox/: Dockerfile
lunar_forge/subagents/: __init__.py  base.py  coder.py  orchestrator.py  planner.py  reviewer.py  scaffolder.py  security.py  tester.py
tests/: test_agents_md.py  test_browser_validation.py  test_checkpoints.py  test_cli.py  test_config.py  test_dependency_summary.py  test_docker_runner.py  test_edit_file.py  test_git.py  test_mcp_client.py  test_mcp_config.py  test_mcp_registry.py  test_model_clients.py  test_new_project.py  test_permissions.py  test_plugins.py  test_project_detection.py  test_project_health.py  test_prompts.py  test_safe_paths.py  test_sessions.py  test_shell.py  test_subagents.py  test_tool_registry.py  test_validation.py
(+60 files in other folders)
