[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lunar-forge"
version = "0.1.0"
description = "A small local code-agent scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "litellm>=1.60.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lunar-forge = "lunar_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lunar_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]